# locale2b

./: .gitattributes  .gitignore  ASAHI_SCRIPT_ADAPTATIONS.md  ASAHI_SETUP_GUIDE.md  DESIGN.md  DEVELOPMENT_PHASES.md  QUICKSTART_ASAHI.md  README.md  SETUP_YOUR_SERVER.md  pyproject.toml
compymac_integration/: __init__.py  workspace_provider.py
guest_agent/: __init__.py  agent.py
scripts/: create-rootfs-secure.sh  create-rootfs.sh  setup-secure.sh  setup.sh  test-sandbox.sh  vendor-artifacts.sh
tests/: __init__.py  test_capacity.py  test_config.py  test_security.py
workspace_service/: __init__.py  config.py  main.py  sandbox_manager.py  security.py
